--- a/CommandRe/OnlineStore.Spa/ClientApp/css/site.css
+++ b/CommandRe/OnlineStore.Spa/ClientApp/css/site.css
@@ -1,11 +1,11 @@
-li .glyphicon {
+.main-nav li .glyphicon {
     margin-right: 10px;
 }
 
 /* Highlighting rules for nav menu items */
-li.link-active a,
-li.link-active a:hover,
-li.link-active a:focus {
+.main-nav li a.active,
+.main-nav li a.active:hover,
+.main-nav li a.active:focus {
     background-color: #4189C7;
     color: white;
 }
@@ -19,37 +19,44 @@ li.link-active a:focus {
     z-index: 1;
 }
 
+@media (max-width: 767px) {
+    /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
+    body {
+        padding-top: 50px;
+    }
+}
+
 @media (min-width: 768px) {
     /* On small screens, convert the nav menu to a vertical sidebar */
     .main-nav {
         height: 100%;
         width: calc(25% - 20px);
     }
-    .navbar {
+    .main-nav .navbar {
         border-radius: 0px;
         border-width: 0px;
         height: 100%;
     }
-    .navbar-header {
+    .main-nav .navbar-header {
         float: none;
     }
-    .navbar-collapse {
+    .main-nav .navbar-collapse {
         border-top: 1px solid #444;
         padding: 0px;
     }
-    .navbar ul {
+    .main-nav .navbar ul {
         float: none;
     }
-    .navbar li {
+    .main-nav .navbar li {
         float: none;
         font-size: 15px;
         margin: 6px;
     }
-    .navbar li a {
+    .main-nav .navbar li a {
         padding: 10px 16px;
         border-radius: 4px;
     }
-    .navbar a {
+    .main-nav .navbar a {
         /* If a menu item's text is too long, truncate it */
         width: 100%;
         white-space: nowrap;
